<resources>
    <string name="app_name">Calculator</string>

    <string name="addition_operand">+</string>
    <string name="close_bracket_operand">)</string>
    <string name="default_result_value">0</string>
    <string name="division_operand">÷</string>
    <string name="dot_separator">.</string>
    <string name="power">^</string>
    <string name="multiplication_operand">×</string>
    <string name="open_bracket_operand">(</string>
    <string name="result_operand">=</string>
    <string name="subtraction_operand">-</string>
    <string name="value_0">0</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
</resources>